fixed : error when injecting with class type